// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apply icon-prefix prop to error-icon 1`] = `
<div class="van-image">
  <div class="van-image__error"><i class="my-icon my-icon-error van-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`apply icon-prefix prop to loading-icon 1`] = `
<div class="van-image"><img class="van-image__img">
  <div class="van-image__loading"><i class="my-icon my-icon-success van-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`default slot 1`] = `
<div class="van-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="van-image__img">
  <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
      <!----></i></div>Custom Default
</div>
`;

exports[`error-icon prop 1`] = `
<div class="van-image">
  <div class="van-image__error"><i class="van-icon van-icon-error van-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`lazy load 1`] = `
<div class="van-image"><img class="van-image__img">
  <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`lazy-load error event 1`] = `
<div class="van-image">
  <div class="van-image__error"><i class="van-icon van-icon-photo-fail van-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`lazy-load load event 1`] = `<div class="van-image"><img class="van-image__img"></div>`;

exports[`load event 1`] = `<div class="van-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="van-image__img"></div>`;

exports[`load event 2`] = `
<div class="van-image"><img src="" class="van-image__img">
  <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`loading-icon prop 1`] = `
<div class="van-image"><img class="van-image__img">
  <div class="van-image__loading"><i class="van-icon van-icon-success van-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`radius prop 1`] = `
<div class="van-image" style="overflow: hidden; border-radius: 3px;"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="van-image__img">
  <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`show-error prop 1`] = `<div class="van-image"></div>`;

exports[`show-loading prop 1`] = `<div class="van-image"><img class="van-image__img"></div>`;
